Version 1.2.0 released 2025-07-XX

* Ignore macOS 13 SIP attribute 'com.apple.provenance' in tests
  https://github.com/xattr/xattr/pull/130

Version 1.1.4 released 2025-01-06

* Update GitHub actions to support upload-artifact@v4 (with the side-effect of
  building wheels for Python v3.13)
  https://github.com/xattr/xattr/issues/123
  https://github.com/xattr/xattr/pull/124
  https://github.com/xattr/xattr/pull/125
  https://github.com/xattr/xattr/pull/126
  https://github.com/xattr/xattr/pull/127

Version 1.1.0 released 2024-02-01

* Improve FreeBSD compatibility by stripping "user." prefix on attribute
  names, but add them when listing attributes so that it behaves similarly
  to Linux (the xattr.pyxattr_compat module does not add them).
  Also adds FreeBSD with its ports build of Python 3.9 to the CI test suite.
  https://github.com/xattr/xattr/issues/116
  https://github.com/xattr/xattr/pull/117

Version 1.0.0 released 2023-11-19

* Update test & build matrix and use Github Actions as a Trusted Publisher.
  Drop support for Python 3.7 and earlier (including Python 2).
  Move tests out of package.
  https://github.com/xattr/xattr/issues/115

Version 0.10.1 released 2022-12-03

* Update github actions
  https://github.com/xattr/xattr/issues/112
* Updated README to add reference to osxmetadata
  https://github.com/xattr/xattr/pull/110

Version 0.10.0 released 2022-10-24

* Remove exec flag from tool.py
  https://github.com/xattr/xattr/pull/106
* Update the documentation to mention
  the attr package and its getfattr and
  setfattr tools
  https://github.com/xattr/xattr/pull/103

Version 0.9.9 released 2021-12-11

* Fix regression in xattr console script
  https://github.com/xattr/xattr/pull/100
* Add -c clear option
  https://github.com/xattr/xattr/pull/98
* Add note about Linux namespace requirement
  https://github.com/xattr/xattr/pull/96

Version 0.9.8 released 2021-11-19

* Update build to use Github Actions
  https://github.com/xattr/xattr/pull/95